Slight restructuring and started skeleton of background.

--- a/MPP/background.tex
+++ b/MPP/background.tex
@@ -1,8 +1,17 @@
 \section{Background}
 This section provides information concerning the components and concepts required to complete this project, as well as examples and brief evaluation of existing related work.
 \subsection{OpenCL}
+\subsubsection{2.0}
 \subsection{Functional Programming}
+\subsubsection{Map}
+\subsubsection{Filter}
+\subsubsection{Fold}
+\subsubsection{Scan}
 \subsection{MapReduce}
+\subsubsection{Map}
+\subsubsection{Partition}
+\subsubsection{Compare}
+\subsubsection{Reduce}
 \subsection{MARS}
 \subsection{Phoenix}
 \subsubsection{Phoenix++}
