Bigger and intro is a page

--- a/MPP/introduction.tex
+++ b/MPP/introduction.tex
@@ -18,4 +18,5 @@ Pure functional programming provides \emph{referential transparency} as each fun
 The ability to simplify long chains of computation into a series of values being mapped to other values greatly increases the ease of verifying an algorithm, as well as highlighting computations that cannot affect the result of others and can therefore be run concurrently.
 
 The purpose of this project is to combine the benefits provided by functional-inspired paradigms with the increased theoretical performance of \ac{GPUs} in order to provide an easily-utilised library for both trivial and less trivial parallelisation.
-Each feature implemented shall be evaluated against existing implementations of functional languages running on multi-core systems and on existing similar systems such as \emph{MARS}, "a \emph{MapReduce} Framework on Graphics Processors".
+
+Each feature implemented shall be evaluated against existing implementations of functional languages and on similar GPU/\ac{OpenCL} frameworks.
