Progressing on background

--- a/MPP/abstract.tex
+++ b/MPP/abstract.tex
@@ -1,7 +1,8 @@
 \begin{abstract}       % subsection 1.1.
   This document outlines my proposal for a project researching the implementation of large-scale data-processing paradigms on multi-core systems.
   The aim is to provide easily-exploited access to the vast number of programmable cores present in modern systems containing \ac{GPUs} and investigate how their usage can be optimised.
-  The project aims to provide a framework that will be of use to researchers and students who have access to a high-performance GPU devices and would benefit from an increase in throughput when processing datasets in a manner that can be suitably parallelised.
+
+  The project should provide a framework that will be of use to researchers and students who have access to a high-performance GPU devices and would benefit from an increase in throughput when processing datasets in a manner that can be suitably parallelised.
   In addition, the project hopes to avoid the disadvantages of similar parallel frameworks that require large amounts of user-intervention to tune execution, and therefore increase the barriers of entry to otherwise obtainable benefits.
 
 These goals concentrate on maximising the performance and usability of a framework that results from evaluation and iteration of optimisations alongside research into existing failings.
