--- a/MPP/proposal.tex
+++ b/MPP/proposal.tex
@@ -30,6 +30,7 @@
 \pagestyle{empty}
   \bibitem{khronos}
     The Khronos Group OpenCL Standard
+
     http://www.khronos.org/registry/cl/specs/opencl-1.2.pdf
 
   \bibitem{perf}
@@ -40,8 +41,14 @@
 
     2011 International Conference on Parallel Processing
 
+  \bibitem{mapreduce}
+    MapReduce: Simplified Data Processing on Large Clusters
+
+    Jeffrey Dean and Sanjay Ghemawat
+
   \bibitem{streammr}
     StreamMR: An Optimized MapReduce Frameworkfor AMD GPUs
+
     Marwa Elteiry, Heshan Liny, Wu-chun Fengy, and Tom Scoglandy
 
 \thispagestyle{empty}
