Even more background, need to remember to actually write about combiner functions

--- a/MPP/abstract.tex
+++ b/MPP/abstract.tex
@@ -8,6 +8,8 @@
 These goals concentrate on maximising the performance and usability of a framework that results from evaluation and iteration of optimisations alongside research into existing failings.
 
 The resulting implementation shall aim to verify the hypothesis that there exists use-cases, such as machine-learning algorithms requiring large datasets, that can be efficiently implemented on a highly parallel device whilst remaining programmer-friendly by presenting a collection of simple functions that encapsulate all required complexities.
+
+Researching relevant advances, producing the framework, and evaluating it against similar project outcomes should require a lengthy period of management and iteration, I hope to demonstrate that there is sufficient depth in my plans to take advantage of such a long period of focussed activity.
 \end{abstract}
 
 
