--- a/MPP/introduction.tex
+++ b/MPP/introduction.tex
@@ -5,7 +5,7 @@
 \ac{GPUs} are highly parallel co-processors designed for \ac{SIMD} execution on a vector dataset.
 \ac{GPUs} canonically used hundreds or thousands of shader units to perform functions required to render a 3D scene; though recently, frameworks such as \ac{OpenCL} have facilitated the usage of shader units to perform arbitrary tasks specified by a subset of C code.
 
- With the capability of user-defined code execution on each GPU core, devices traditionally purchased for recreational purposes gain theoretical data-processing capabilities that far exceed those of systems solely scheduling instructions on a multi-core \ac{CPU}.
+ With the capability of user-defined code execution on each GPU core, devices traditionally purchased for recreational purposes gain theoretical data-processing capabilities that far exceed those of systems solely scheduling instructions on a multi-core \ac{CPU}.\cite{mars}
 
 Unfortunately simply adding more cores in order to increase the speed at which a system can perform computation provides gains that cannot be utilised fully by common sequential programming approaches.
 In order to exploit the full potential for multiple threads to be executed concurrently, the programmer needs to structure data as a collection of processable entities that share no dependencies.
