--- a/MPP/background.tex
+++ b/MPP/background.tex
@@ -1,7 +1,7 @@
 \section{Background}
 This section provides background information concerning the components and concepts required to studied in order to complete this project, as well as examples and brief evaluation of existing related work.
 \subsection{OpenCL}
-OpenCL is an open framework for executing tasks described by a C99 kernel on heterogeneous devices such as multi-core CPUs and GPUs. Kernels are compiled for specific detected on-board platforms and abstract from underlying hardware implementations of operations in order to stay platform-independent across compute devices. Data-processing is distributed across the many cores of a device via the arrangement of kernel instances or \emph{work-items} into \emph{workgroups}.
+OpenCL is an open framework for executing tasks described by a C99 kernel on heterogeneous devices such as multi-core CPUs and GPUs. Kernels are compiled for specific detected on-board platforms and abstracted from underlying hardware implementations of operations in order to stay platform-independent across compute devices. Data-processing is distributed across the many cores of a device via the arrangement of kernel instances or \emph{work-items} into \emph{workgroups}.
 
 Work-groups are a matrix of related work-items spanning one, two or three dimensions. They serve to partition datasets into subsets and arrange instances of tasks into sectors that can pass state between each-other without requiring synchronisation outside of their scope. An important challenge when implementing high-performance algorithms in OpenCL is understanding the flow of data between threads so that work-units can be organised into an arrangement that allows efficient memory synchronisation by exploiting locality.
 
@@ -27,17 +27,20 @@ If other variables are required they can be shared and since no side-effects are
 \emph{Scan} is similar to \emph{Fold} in that it takes an input vector and a combining function. However, instead of returning the final result, Scan returns a vector that is equal to the intermediate values if the combining function was incrementally applied from one end of the dataset to the other. Scan can also exploit a highly-parallel architecture.
 \subsection{MapReduce}
 \emph{MapReduce} is a data-flow model and program specification for distributed processing of particularly large data-sets\cite{mapreduce}. It is designed to assist the programmer with automatic parallelisation and scheduling built into the implementation platform, requiring only specification of intermediary functions.
-\paragraph{Map}
-\paragraph{Partition}
-\paragraph{Compare}
-\paragraph{Reduce}
-The \emph{Reduce} function takes an input of 
 
-Positive aspects of the MapReduce model are mainly attributed to its convenient level of abstraction. No knowledge of underlying parallel programming techniques is required to specify functions for transforming data.
-\subsection{Previous Work}
-\subsubsection{MARS}
-\subsubsection{Phoenix}
-\subsubsection{Phoenix++}
-\subsubsection{StreamMR}
-\subsection{Ruby}
-\subsubsection{Extensibility}
+The use of MapReduce is heavily linked with datasets that are magnitudes higher in size than any one conventional system could process alone; Its execution model relies on building up and then combining streams of data using pipeline elements that have strict input/output type requirements.
+\paragraph{Map}
+The \emph{Map} task (not to be confused with the Functional Programming primitive of the same name) takes a (key, value) tuple input and returns a list of (key, value) tuples resulting from its given function applied to that input. Output tuples can have any key and value, and are not required to match. When presented with a list of input tuples, MapReduce runs the Map task on each input in parallel.
+
+After the Map task is complete, the \emph{Combiner} collects all tuples from all Map tasks that share the same key and emits a (key, list-of-values) tuple that contains all the values associated with that key.
+\paragraph{Reduce}
+The \emph{Reduce} task takes a (key, list-of-values) tuple and returns some number of values obtained by applying it's given function to the input. When multiple post-combiner tuples exist, MapReduce runs the Reduce task on each input in parallel.
+
+With a combination of Map and Reduce tasks, MapReduce can transform a number of inputs into a number of values over many machines and benefit greatly from task parallelism.
+
+\paragraph{Combiners}
+herp derp combiners.
+
+\paragraph{Ease of use}
+Some of the success of the MapReduce model is attributed to its convenient level of abstraction. No knowledge of underlying parallel programming techniques is required to specify functions for transforming data.
+
